<resources>
    <string name="app_name">Live Score Match</string>

    <!--String di item event-->
    <string name="tanggal">Tanggal</string>
    <string name="team_a">Team A</string>
    <string name="_0_vs_0">0 VS 0</string>
    <string name="team_b">Team B</string>

    <!--String di halaman event detail-->
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defender">Defenders</string>
    <string name="midfielder">Midfielders</string>
    <string name="forward">Forwards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>